--- a/index.html
+++ b/index.html
@@ -11,173 +11,202 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header -->
     <header>
-      <!-- Navigation -->
-      <nav class="menu">
-        <a href="./index.html" class="logo link">
-          Web<span class="logo-top">Studio</span></a
-        >
-        <ul class="menu-list list">
-          <li class="menu-item">
-            <a href="./index.html" class="menu-link link">Studio</a>
-          </li>
-          <li class="menu-item">
-            <a href="./portfolio.html" class="menu-link link">Portfolio</a>
-          </li>
-          <li class="menu-item">
-            <a href="" class="menu-link link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <!-- Header contacts -->
-      <address class="contacts">
-        <ul class="contacts-list list">
-          <li class="contacts-item">
-            <a href="mailto:info@devstudio.com" class="contact-link link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a href="tel:+110001111111" class="contact-link link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <!-- Navigation -->
+        <nav class="menu">
+          <a href="./index.html" class="logo link">
+            Web<span class="logo-top">Studio</span></a
+          >
+          <ul class="menu-list list">
+            <li class="menu-item">
+              <a href="./index.html" class="menu-link link">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a href="./portfolio.html" class="menu-link link">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a href="" class="menu-link link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- Header contacts -->
+        <address class="contacts">
+          <ul class="contacts-list list">
+            <li class="contacts-item">
+              <a href="mailto:info@devstudio.com" class="contact-link link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a href="tel:+110001111111" class="contact-link link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!-- Main content -->
     <main>
       <!-- Hero -->
       <section class="hero">
-        <h1 class="hero-title">
-          Effective Solutions<br />
-          for Your Business
-        </h1>
-        <button type="button" class="button primary">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="button primary">Order Service</button>
+        </div>
       </section>
       <!-- Features section -->
-      <section class="features-content">
-        <h2 hidden class="content-title">Features</h2>
-        <ul class="content-list list">
-          <li class="content-item">
-            <h3 class="item-title">Strategy</h3>
-            <p class="description description-dark">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="content-item">
-            <h3 class="item-title">Punctuality</h3>
-            <p class="description description-dark">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="content-item">
-            <h3 class="item-title">Diligence</h3>
-            <p class="description description-dark">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="content-item">
-            <h3 class="item-title">Technologies</h3>
-            <p class="description description-dark">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="features-conteiner section">
+        <div class="container">
+          <h2 class="visually-hidden">Features</h2>
+          <ul class="content-list list">
+            <li class="content-item features-item">
+              <div class="features-content">
+                <h3 class="item-title">Strategy</h3>
+                <p class="description description-dark">
+                  Our goal is to identify the business problem to walk away with
+                  the perfect and creative solution.
+                </p>
+              </div>
+            </li>
+            <li class="content-item features-item">
+              <div class="features-content">
+                <h3 class="item-title">Punctuality</h3>
+                <p class="description description-dark">
+                  Bring the key message to the brand's audience for the best
+                  price within the shortest possible time.
+                </p>
+              </div>
+            </li>
+            <li class="content-item features-item">
+              <div class="features-content">
+                <h3 class="item-title">Diligence</h3>
+                <p class="description description-dark">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
+              </div class="features-content">
+            </li>
+            <li class="content-item features-item">
+              <div class="features-content">
+                <h3 class="item-title">Technologies</h3>
+                <p class="description description-dark">
+                  Design practice focused on digital experiences. We bring forth
+                  a deep passion for problem-solving.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- What are we doing section -->
-      <section class="product-content">
-        <h2 class="content-title">What are we doing</h2>
-        <ul class="content-list list">
-          <li class="item-picture">
-            <img
-              src="./images/feature-1.jpg"
-              alt="content on pc monitor"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="item-picture">
-            <img
-              src="./images/feature-2.jpg"
-              alt="content on cellphone"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="item-picture">
-            <img
-              src="./images/feature-3.jpg"
-              alt="content on cellphone and notebook"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+      <section class="product-content section">
+        <div class="container">
+          <h2 class="content-title">What are we doing</h2>
+          <ul class="content-list list">
+            <li class="item-picture">
+              <img
+                src="./images/feature-1.jpg"
+                alt="content on pc monitor"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="item-picture">
+              <img
+                src="./images/feature-2.jpg"
+                alt="content on cellphone"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="item-picture">
+              <img
+                src="./images/feature-3.jpg"
+                alt="content on cellphone and notebook"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Our Team section -->
-      <section class="team-content">
-        <h2 class="content-title">Our Team</h2>
-        <ul class="content-list list">
-          <li class="content-item">
-            <img
-              src="./images/teammember-1.jpg"
-              alt="Mark Guerrero`s photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="item-title">Mark Guerrero</h3>
-            <p class="description description-dark">Product Designer</p>
-          </li>
-          <li class="content-item">
-            <img
-              src="./images/teammember-2.jpg"
-              alt="Tom Ford`s photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="item-title">Tom Ford</h3>
-            <p class="description description-dark">Frontend Developer</p>
-          </li>
-          <li class="content-item">
-            <img
-              src="./images/teammember-3.jpg"
-              alt="Camila Garcia`s photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="item-title">Camila Garcia</h3>
-            <p class="description description-dark">Marketing</p>
-          </li>
-          <li class="content-item">
-            <img
-              src="./images/teammember-4.jpg"
-              alt="Daniel Wilson`s photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="item-title">Daniel Wilson</h3>
-            <p class="description description-dark">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team-content section">
+        <div class="container">
+          <h2 class="content-title">Our Team</h2>
+          <ul class="content-list list">
+            <li class="content-item emloyees-card">
+              <img
+                src="./images/teammember-1.jpg"
+                alt="Mark Guerrero`s photo"
+                width="264"
+                height="260"
+              />
+              <div class="employees-wrapper">
+                <h3 class="item-title">Mark Guerrero</h3>
+                <p class="description description-dark">Product Designer</p>
+              </div>
+            </li>
+            <li class="content-item emloyees-card">
+              <img
+                src="./images/teammember-2.jpg"
+                alt="Tom Ford`s photo"
+                width="264"
+                height="260"
+              />
+              <div class="employees-wrapper">
+                <h3 class="item-title">Tom Ford</h3>
+                <p class="description description-dark">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="content-item emloyees-card">
+              <img
+                src="./images/teammember-3.jpg"
+                alt="Camila Garcia`s photo"
+                width="264"
+                height="260"
+              />
+              <div class="employees-wrapper">
+                <h3 class="item-title">Camila Garcia</h3>
+                <p class="description description-dark">Marketing</p>
+              </div>
+            </li>
+            <li class="content-item emloyees-card">
+              <img
+                src="./images/teammember-4.jpg"
+                alt="Daniel Wilson`s photo"
+                width="264"
+                height="260"
+              />
+              <div class="employees-wrapper">
+                <h3 class="item-title">Daniel Wilson</h3>
+                <p class="description description-dark">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo link">
+      <div class="container footer-content">
+<a href="./index.html" class="logo footer-logo link">
         Web<span class="logo-bottom">Studio</span></a
       >
-      <p class="description description-light">
+      <p class="description footer-description description-light">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+      </div>
     </footer>
   </body>
 </html>
