--- a/portfolio.html
+++ b/portfolio.html
@@ -80,126 +80,135 @@
           </ul>
         </div>
         <div class="conteiner">
-         <ul class="project-list list">
-          <li class="project-item">
-            <a href="" class="project-link link"
-              ><img
-                class="image"
-                src="./images/projectcard-1.jpg"
-                alt="app interface"
-                width="360"
-                height="300"
-              />
-              <div class="project-wrapper">
-                <h2 class="item-title">Banking App Interface Concept</h2>
-              <p class="description description-dark">App</p></a>
-              </div>
-          </li>
-          <li class="project-item">
-            <a href="" class="project-link link"
-              ><img
-                src="./images/projectcard-2.jpg"
-                alt="paying by phone"
-                width="360"
-                height="300"
-              />
-              <div class="project-wrapper">
-                <h2 class="item-title">Cashless Payment</h2>
-              <p class="description description-dark">Marketing</p></a>
-              </div>  
-          </li>
-          <li class="project-item">
-            <a href="" class="project-link link"
-              ><img
-                src="./images/projectcard-3.jpg"
-                alt="app on phone and notebook"
-                width="360"
-                height="300"
-              />
-              <div class="project-wrapper">
-                <h2 class="item-title">Meditation App</h2>
-              <p class="description description-dark">App</p></a>
-              </div>
-          </li>
-          <li class="project-item">
-            <a href="" class="project-link link"
-              ><img
-                src="./images/projectcard-4.jpg"
-                alt="driving a car"
-                width="360"
-                height="300"
-              />
-              <div class="project-wrapper">
-                <h2 class="item-title">Taxi Service</h2>
-              <p class="description description-dark">Marketing</p></a>
-              </div>
-          </li>
-          <li class="project-item">
-            <a href="" class="project-link link"
-              ><img
-                src="./images/projectcard-5.jpg"
-                alt="screen illustrations"
-                width="360"
-                height="300"
-              />
-              <div class="project-wrapper">
-                <h2 class="item-title">Screen Illustrations</h2>
-              <p class="description description-dark">Design</p></a>
-              </div>
-          </li>
-          <li class="project-item">
-            <a href="" class="project-link link"
-              ><img
-                src="./images/projectcard-6.jpg"
-                alt="smiling girl"
-                width="360"
-                height="300"
-              />
-              <div class="project-wrapper">
-                <h2 class="item-title">Online Courses</h2>
-              <p class="description description-dark">Marketing</p></a>
-              </div>
-          </li>
-          <li class="project-item">
-            <a href="" class="project-link link"
-              ><img
-                src="./images/projectcard-7.jpg"
-                alt="instagram stories"
-                width="360"
-                height="300"
-              />
-              <div class="project-wrapper">
-                <h2 class="item-title">Instagram Stories Concept</h2>
-              <p class="description description-dark">Design</p></a>
-              </div>
-          </li>
-          <li class="project-item">
-            <a href="" class="project-link link"
-              ><img
-                src="./images/projectcard-8.jpg"
-                alt="somebody with food"
-                width="360"
-                height="300"
-              />
-              <div class="project-wrapper">
-                <h2 class="item-title">Organic Food</h2>
-              <p class="description description-dark">Web Site</p></a >
-              </div>
-          </li>
-          <li class="project-item">
-            <a href="" class="project-link link"
-              ><img
-                src="./images/projectcard-9.jpg"
-                alt="making latte"
-                width="360"
-                height="300"
-              />
-              <div class="project-wrapper">
-                <h2 class="item-title">Fresh Coffee</h2>
-              <p class="description description-dark">Web Site</p></a>
-              </div>
-          </li>
-        </ul>
+          <ul class="project-list list">
+            <li class="project-item">
+              <a href="" class="project-link link"
+                ><img
+                  class="image"
+                  src="./images/projectcard-1.jpg"
+                  alt="app interface"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-wrapper">
+                  <h2 class="item-title">Banking App Interface Concept</h2>
+                  <p class="description description-dark">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-item">
+              <a href="" class="project-link link"
+                ><img
+                  src="./images/projectcard-2.jpg"
+                  alt="paying by phone"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-wrapper">
+                  <h2 class="item-title">Cashless Payment</h2>
+                  <p class="description description-dark">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-item">
+              <a href="" class="project-link link"
+                ><img
+                  src="./images/projectcard-3.jpg"
+                  alt="app on phone and notebook"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-wrapper">
+                  <h2 class="item-title">Meditation App</h2>
+                  <p class="description description-dark">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-item">
+              <a href="" class="project-link link"
+                ><img
+                  src="./images/projectcard-4.jpg"
+                  alt="driving a car"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-wrapper">
+                  <h2 class="item-title">Taxi Service</h2>
+                  <p class="description description-dark">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-item">
+              <a href="" class="project-link link"
+                ><img
+                  src="./images/projectcard-5.jpg"
+                  alt="screen illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-wrapper">
+                  <h2 class="item-title">Screen Illustrations</h2>
+                  <p class="description description-dark">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-item">
+              <a href="" class="project-link link"
+                ><img
+                  src="./images/projectcard-6.jpg"
+                  alt="smiling girl"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-wrapper">
+                  <h2 class="item-title">Online Courses</h2>
+                  <p class="description description-dark">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-item">
+              <a href="" class="project-link link"
+                ><img
+                  src="./images/projectcard-7.jpg"
+                  alt="instagram stories"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-wrapper">
+                  <h2 class="item-title">Instagram Stories Concept</h2>
+                  <p class="description description-dark">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-item">
+              <a href="" class="project-link link"
+                ><img
+                  src="./images/projectcard-8.jpg"
+                  alt="somebody with food"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-wrapper">
+                  <h2 class="item-title">Organic Food</h2>
+                  <p class="description description-dark">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-item">
+              <a href="" class="project-link link"
+                ><img
+                  src="./images/projectcard-9.jpg"
+                  alt="making latte"
+                  width="360"
+                  height="300"
+                />
+                <div class="project-wrapper">
+                  <h2 class="item-title">Fresh Coffee</h2>
+                  <p class="description description-dark">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
