--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   Research and confirm brands that present the strongest digital
                   growth opportunities and minimize risk.
                 </p>
-              </div class="features-content">
+              </div>
             </li>
             <li class="content-item features-item">
               <div class="features-content">
@@ -199,13 +199,13 @@
     </main>
     <footer class="footer">
       <div class="container footer-content">
-<a href="./index.html" class="logo footer-logo link">
-        Web<span class="logo-bottom">Studio</span></a
-      >
-      <p class="description footer-description description-light">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+        <a href="./index.html" class="logo footer-logo link">
+          Web<span class="logo-bottom">Studio</span></a
+        >
+        <p class="description footer-description description-light">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
