--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
+    <header class="header-menu">
       <div class="container header-container">
         <!-- Navigation -->
         <nav class="menu">
-          <a href="./index.html" class="logo link">
+          <a href="./index.html" class="logo header-logo link">
             Web<span class="logo-top">Studio</span></a
           >
           <ul class="menu-list list">
@@ -65,45 +65,37 @@
         </div>
       </section>
       <!-- Features section -->
-      <section class="features-conteiner section">
+      <section class="features-container section">
         <div class="container">
           <h2 class="visually-hidden">Features</h2>
           <ul class="content-list list">
             <li class="content-item features-item">
-              <div class="features-content">
-                <h3 class="item-title">Strategy</h3>
-                <p class="description description-dark">
-                  Our goal is to identify the business problem to walk away with
-                  the perfect and creative solution.
-                </p>
-              </div>
+              <h3 class="item-title">Strategy</h3>
+              <p class="description description-dark">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
             </li>
             <li class="content-item features-item">
-              <div class="features-content">
-                <h3 class="item-title">Punctuality</h3>
-                <p class="description description-dark">
-                  Bring the key message to the brand's audience for the best
-                  price within the shortest possible time.
-                </p>
-              </div>
+              <h3 class="item-title">Punctuality</h3>
+              <p class="description description-dark">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
             </li>
             <li class="content-item features-item">
-              <div class="features-content">
-                <h3 class="item-title">Diligence</h3>
-                <p class="description description-dark">
-                  Research and confirm brands that present the strongest digital
-                  growth opportunities and minimize risk.
-                </p>
-              </div>
+              <h3 class="item-title">Diligence</h3>
+              <p class="description description-dark">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
             </li>
             <li class="content-item features-item">
-              <div class="features-content">
-                <h3 class="item-title">Technologies</h3>
-                <p class="description description-dark">
-                  Design practice focused on digital experiences. We bring forth
-                  a deep passion for problem-solving.
-                </p>
-              </div>
+              <h3 class="item-title">Technologies</h3>
+              <p class="description description-dark">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
             </li>
           </ul>
         </div>
