--- a/portfolio.html
+++ b/portfolio.html
@@ -19,11 +19,11 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
+    <header class="header-menu">
       <div class="container header-container">
         <!-- Navigation -->
         <nav class="menu">
-          <a href="./index.html" class="logo link">
+          <a href="./index.html" class="logo header-logo link">
             Web<span class="logo-top">Studio</span></a
           >
           <ul class="menu-list list">
@@ -59,7 +59,7 @@
     <main>
       <!-- Filter buttons -->
       <section class="content">
-        <div class="conteiner">
+        <div class="container">
           <h1 class="visually-hidden">Project cards</h1>
           <ul class="filter-button list">
             <li class="button-item">
@@ -78,8 +78,6 @@
               <button type="button" class="button secondary">Marketing</button>
             </li>
           </ul>
-        </div>
-        <div class="conteiner">
           <ul class="project-list list">
             <li class="project-item">
               <a href="" class="project-link link"
@@ -209,7 +207,6 @@
               </a>
             </li>
           </ul>
-        </div>
       </section>
     </main>
     <footer class="footer">
