--- a/portfolio.html
+++ b/portfolio.html
@@ -207,6 +207,7 @@
               </a>
             </li>
           </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
